Fix flickering of tooltips
From this stack overflow:
https://stackoverflow.com/questions/14326724/twitter-bootstrap-tooltip-flickers-when-placed-on-top-of-button-but-works-fine

--- a/omw/static/css/gwg.css
+++ b/omw/static/css/gwg.css
@@ -281,4 +281,6 @@ color: white;
 padding: 0 5px;
 }
 
-
+.tooltip {
+  pointer-events: none;
+}
